# HW3-Clustering

./: README.md  function_testing.ipynb  pyproject.toml
.github/: pytest.yml
.github/workflows/: pytest.yml
cluster/: kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
