[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "cluster"
authors = [{name = "Prathamesh Chati", email = "prathamesh.chati@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
    "numpy",
    "scikit-learn",
    "collections"
]

[project.urls]
Home = "https://github.com/prathameshchati/HW3-Clustering"